# inv3d-generator

./: Dockerfile  README.md  setup.cfg
assets/: ecommerce_data.txt  payment_terms.csv  template_sources.xlsx
assets/fonts/: LICENSE
assets/logos/: README.md
assets/meshes/: README.txt
assets/templates/: Invoice_1.htm  Invoice_10.htm  Invoice_100.htm  Invoice_11.htm  Invoice_12.htm  Invoice_13.htm  Invoice_14.htm  Invoice_15.htm  Invoice_16.htm  Invoice_17.htm  Invoice_18.htm  Invoice_19.htm  Invoice_2.htm  Invoice_20.htm  Invoice_21.htm  Invoice_22.htm  Invoice_23.htm  Invoice_24.htm  Invoice_25.htm  Invoice_26.htm  Invoice_27.htm  Invoice_28.htm  Invoice_29.htm  Invoice_3.htm  Invoice_30.htm  Invoice_31.htm  Invoice_32.htm  Invoice_33.htm  Invoice_34.htm  Invoice_35.htm  Invoice_36.htm  Invoice_37.htm  Invoice_38.htm  Invoice_39.htm  Invoice_4.htm  Invoice_40.htm  Invoice_41.htm  Invoice_42.htm  Invoice_43.htm  Invoice_44.htm  (+60 more)
src/: resume.py  start.py
src/inv3d_generator/: formats.py  generator.py  util.py
src/inv3d_generator/invoice/: bbox.py  fake_content.py  main.py  template.py  util.py  web_renderer.py  word_locator.py
src/inv3d_generator/invoice/rendering/: pyhtml2pdf.py
src/inv3d_generator/rendering/: blender_renderer.py  blender_server.py  main.py  priority_lock.py
src/inv3d_generator/rendering/blender/: doc3D_render_alb.py  doc3D_render_dmap.py  doc3D_render_mesh.py  doc3D_render_norm.py  doc3D_render_recon.py
src/inv3d_generator/supplementary/: backward_mapping.py  main.py  warped_angle.py  warped_curvature.py  warped_text_mask.py
