[metadata]
name = inv3D-generator
version = 0.0.1
author = Felix Hertlein
author_email = hertlein@fzi.de
description = Inv3D dataset generator
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy==1.20.2
    tqdm==4.60.0
    dpath==2.0.1
    pandas==1.2.4
    phonenumbers==8.12.21
    Faker==8.1.1
    schwifty==2021.4.0
    opencv_python==4.5.1.48
    bounding_box==0.1.3
    scikit_learn==0.24.2
    beautifulsoup4==4.9.3
    pdf2image==1.14.0
    selenium==3.141.0
    webdriver_manager==3.4.2
    pdfminer==20191125
    torch==1.8.1
    Flask==2.0.1
    Werkzeug==2.2.2

[options.packages.find]
where = src
